// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo esv secret export "frodo esv secret export --all": should export all secrets to a single file 1`] = `""`;

exports[`frodo esv secret export "frodo esv secret export --all": should export all secrets to a single file: allAlphaSecrets.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-admin-token": {
      "_id": "esv-admin-token",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2022-08-11T22:32:38.056Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-admin-token-1999386457729": {
      "_id": "esv-admin-token-1999386457729",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2023-05-14T01:07:41.970Z",
      "lastChangedBy": "8d9723a9-a439-4cbf-beb4-30e52811789d",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "2",
      "description": "Secret Value for testing",
      "encoding": "generic",
      "lastChangeDate": "2023-08-09T19:00:01.501Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "2",
      "useInPlaceholders": true,
    },
    "esv-test-secret-1": {
      "_id": "esv-test-secret-1",
      "activeVersion": "1",
      "description": "test secret one",
      "encoding": "generic",
      "lastChangeDate": "2023-08-06T03:53:17.716Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-pi-generic": {
      "_id": "esv-test-secret-pi-generic",
      "activeVersion": "1",
      "description": "This is a test secret containing the value pi.",
      "encoding": "generic",
      "lastChangeDate": "2023-10-17T22:37:13.115Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-pi-generic2": {
      "_id": "esv-test-secret-pi-generic2",
      "activeVersion": "1",
      "description": "This is a test secret containing the value pi.",
      "encoding": "generic",
      "lastChangeDate": "2023-10-18T21:45:46.571Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": false,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --all-separate --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3 1`] = `""`;

exports[`frodo esv secret export "frodo esv secret export --all-separate --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3: secretExportTestDir3/esv-admin-token.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-admin-token": {
      "_id": "esv-admin-token",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2022-08-11T22:32:38.056Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --all-separate --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3: secretExportTestDir3/esv-admin-token-1999386457729.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-admin-token-1999386457729": {
      "_id": "esv-admin-token-1999386457729",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2023-05-14T01:07:41.970Z",
      "lastChangedBy": "8d9723a9-a439-4cbf-beb4-30e52811789d",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --all-separate --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3: secretExportTestDir3/esv-test-secret.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "2",
      "description": "Secret Value for testing",
      "encoding": "generic",
      "lastChangeDate": "2023-08-09T19:00:01.501Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "2",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --all-separate --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3: secretExportTestDir3/esv-test-secret-1.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-1": {
      "_id": "esv-test-secret-1",
      "activeVersion": "1",
      "description": "test secret one",
      "encoding": "generic",
      "lastChangeDate": "2023-08-06T03:53:17.716Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --all-separate --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3: secretExportTestDir3/esv-test-secret-pi-generic.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-pi-generic": {
      "_id": "esv-test-secret-pi-generic",
      "activeVersion": "1",
      "description": "This is a test secret containing the value pi.",
      "encoding": "generic",
      "lastChangeDate": "2023-10-17T22:37:13.115Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --all-separate --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3: secretExportTestDir3/esv-test-secret-pi-generic2.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-pi-generic2": {
      "_id": "esv-test-secret-pi-generic2",
      "activeVersion": "1",
      "description": "This is a test secret containing the value pi.",
      "encoding": "generic",
      "lastChangeDate": "2023-10-18T21:45:46.571Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": false,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --secret-id esv-test-secret": should export the secret with secret id "esv-test-secret" 1`] = `""`;

exports[`frodo esv secret export "frodo esv secret export --secret-id esv-test-secret": should export the secret with secret id "esv-test-secret": esv-test-secret.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "2",
      "description": "Secret Value for testing",
      "encoding": "generic",
      "lastChangeDate": "2023-08-09T19:00:01.501Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "2",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files 1`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files: esv-admin-token.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-admin-token": {
      "_id": "esv-admin-token",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2022-08-11T22:32:38.056Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files: esv-admin-token-1999386457729.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-admin-token-1999386457729": {
      "_id": "esv-admin-token-1999386457729",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2023-05-14T01:07:41.970Z",
      "lastChangedBy": "8d9723a9-a439-4cbf-beb4-30e52811789d",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files: esv-test-secret.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "2",
      "description": "Secret Value for testing",
      "encoding": "generic",
      "lastChangeDate": "2023-08-09T19:00:01.501Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "2",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files: esv-test-secret-1.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-1": {
      "_id": "esv-test-secret-1",
      "activeVersion": "1",
      "description": "test secret one",
      "encoding": "generic",
      "lastChangeDate": "2023-08-06T03:53:17.716Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files: esv-test-secret-pi-generic.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-pi-generic": {
      "_id": "esv-test-secret-pi-generic",
      "activeVersion": "1",
      "description": "This is a test secret containing the value pi.",
      "encoding": "generic",
      "lastChangeDate": "2023-10-17T22:37:13.115Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files: esv-test-secret-pi-generic2.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-pi-generic2": {
      "_id": "esv-test-secret-pi-generic2",
      "activeVersion": "1",
      "description": "This is a test secret containing the value pi.",
      "encoding": "generic",
      "lastChangeDate": "2023-10-18T21:45:46.571Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": false,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -a --file my-allAlphaSecrets.secret.json": should export all secrets to a single file named my-allAlphaSecrets.secret.json 1`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -a --file my-allAlphaSecrets.secret.json": should export all secrets to a single file named my-allAlphaSecrets.secret.json: my-allAlphaSecrets.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-admin-token": {
      "_id": "esv-admin-token",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2022-08-11T22:32:38.056Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-admin-token-1999386457729": {
      "_id": "esv-admin-token-1999386457729",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2023-05-14T01:07:41.970Z",
      "lastChangedBy": "8d9723a9-a439-4cbf-beb4-30e52811789d",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "2",
      "description": "Secret Value for testing",
      "encoding": "generic",
      "lastChangeDate": "2023-08-09T19:00:01.501Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "2",
      "useInPlaceholders": true,
    },
    "esv-test-secret-1": {
      "_id": "esv-test-secret-1",
      "activeVersion": "1",
      "description": "test secret one",
      "encoding": "generic",
      "lastChangeDate": "2023-08-06T03:53:17.716Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-pi-generic": {
      "_id": "esv-test-secret-pi-generic",
      "activeVersion": "1",
      "description": "This is a test secret containing the value pi.",
      "encoding": "generic",
      "lastChangeDate": "2023-10-17T22:37:13.115Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-pi-generic2": {
      "_id": "esv-test-secret-pi-generic2",
      "activeVersion": "1",
      "description": "This is a test secret containing the value pi.",
      "encoding": "generic",
      "lastChangeDate": "2023-10-18T21:45:46.571Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": false,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -aD secretExportTestDir2": should export all secrets to a single file in the directory secretExportTestDir2 1`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -aD secretExportTestDir2": should export all secrets to a single file in the directory secretExportTestDir2: secretExportTestDir2/allAlphaSecrets.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-admin-token": {
      "_id": "esv-admin-token",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2022-08-11T22:32:38.056Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-admin-token-1999386457729": {
      "_id": "esv-admin-token-1999386457729",
      "activeVersion": "1",
      "description": "Long-lived admin token",
      "encoding": "generic",
      "lastChangeDate": "2023-05-14T01:07:41.970Z",
      "lastChangedBy": "8d9723a9-a439-4cbf-beb4-30e52811789d",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "2",
      "description": "Secret Value for testing",
      "encoding": "generic",
      "lastChangeDate": "2023-08-09T19:00:01.501Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "2",
      "useInPlaceholders": true,
    },
    "esv-test-secret-1": {
      "_id": "esv-test-secret-1",
      "activeVersion": "1",
      "description": "test secret one",
      "encoding": "generic",
      "lastChangeDate": "2023-08-06T03:53:17.716Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-pi-generic": {
      "_id": "esv-test-secret-pi-generic",
      "activeVersion": "1",
      "description": "This is a test secret containing the value pi.",
      "encoding": "generic",
      "lastChangeDate": "2023-10-17T22:37:13.115Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-pi-generic2": {
      "_id": "esv-test-secret-pi-generic2",
      "activeVersion": "1",
      "description": "This is a test secret containing the value pi.",
      "encoding": "generic",
      "lastChangeDate": "2023-10-18T21:45:46.571Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": false,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -D secretExportTestDir1": should export the secret with secret id "esv-test-secret" into the directory named secretExportTestDir1 1`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -D secretExportTestDir1": should export the secret with secret id "esv-test-secret" into the directory named secretExportTestDir1: secretExportTestDir1/esv-test-secret.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "2",
      "description": "Secret Value for testing",
      "encoding": "generic",
      "lastChangeDate": "2023-08-09T19:00:01.501Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "2",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret.secret.json": should export the secret with secret id "esv-test-secret" into file named my-esv-test-secret.secret.json 1`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret.secret.json": should export the secret with secret id "esv-test-secret" into file named my-esv-test-secret.secret.json: my-esv-test-secret.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secrets": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "2",
      "description": "Secret Value for testing",
      "encoding": "generic",
      "lastChangeDate": "2023-08-09T19:00:01.501Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "loadedVersion": "2",
      "useInPlaceholders": true,
    },
  },
}
`;
